--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,5 +18,7 @@ dependencies {
     compile 'com.facebook.react:react-native:+'
     compile 'com.yalantis:ucrop:2.2.0-native'
     compile 'id.zelory:compressor:1.0.4'
-    compile 'com.werb.pickphotoview:pickphotoview:0.1.5'
+    compile ('com.werb.pickphotoview:pickphotoview:0.1.5',{
+        exclude group: 'com.google.code.gson'
+    })
 }
